--- a/CSS/Calculator_style.css
+++ b/CSS/Calculator_style.css
@@ -4,7 +4,6 @@
     padding:0;
     font-family: 'poppins',sans-serif;
     box-sizing: border-box;
-    color: azure;
 }
 
 .container
@@ -14,7 +13,7 @@
    
     display: flex;
     
-    background-image: url(./images/my.jpg);
+    background-image: url(/Image/my.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -27,9 +26,6 @@
     height: 680px;
    margin: auto;
     box-shadow: 0 0 5px 2px;
-}
-.calculator p{
-    margin-top: 22px;
 }
 .calculator form input
 {
@@ -79,16 +75,14 @@ h1
   {
     .calculator
     {
-        margin-left: 10px; 
-        width: 350px;
-        height: 650px;  
+        margin-left: 50px; 
     }
     .calculator form input
     {
         border: 0;
     outline: 0;
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     border-radius: 10px;
     box-shadow: -8px -8px 15px rgba(255, 255, 255,0.1 ), 5px 5px 15px rgba(0, 0, 0,0.2 );
     background: transparent;
@@ -96,15 +90,9 @@ h1
     cursor:pointer;
     margin: 5px; 
     }
-    form .display input
+    .calculator
     {
-    text-align: right;
-    flex: 1;
-    font-size: 45px;
-    box-shadow: 0 0 5px 2px;
-    height: 120px;
-    background-color: #e3f9ff;
-}
-   
+        height: 380px;  
+    }
   }
 
