--- a/CSS/Calculator_style.css
+++ b/CSS/Calculator_style.css
@@ -71,28 +71,23 @@ h1
 {
     text-align: center;
 }
-  /* @media(max-width:360px) 
-  {
-    .calculator
-    {
-        margin-left: 50px; 
+@media (max-width: 402px) {
+    .calculator {
+        margin-left: 10px;
+        padding: 10px;
+        height: auto;
     }
-    .calculator form input
-    {
-        border: 0;
-    outline: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 10px;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255,0.1 ), 5px 5px 15px rgba(0, 0, 0,0.2 );
-    background: transparent;
-    font-size: 10px;
-    cursor:pointer;
-    margin: 5px; 
+
+    .calculator form input {
+        width: 30px;
+        height: 30px;
+        font-size: 12px;
+        margin: 5px;
     }
-    .calculator
-    {
-        height: 380px;  
+
+    .calculator form .display input {
+        font-size: 30px;
+        height: 80px;
     }
-  } */
+} 
 
